[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neotask"
version = "0.1.1"
description = "Modern distributed task scheduler with queue, delay, cron, and web UI"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "HiPeng", email = "helpenx+task@gmail.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: AsyncIO",
]
requires-python = ">=3.9"
dependencies = [
    "pydantic>=2.0.0",
    "typing-extensions>=4.0.0",
]

[project.optional-dependencies]
redis = ["redis>=5.0.0"]
ui = ["fastapi>=0.100.0", "uvicorn[standard]>=0.23.0", "websockets>=12.0"]
cron = ["croniter>=1.4.0"]
prometheus = ["prometheus-client>=0.17.0"]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/neopen/task-schedule-manager"
Repository = "https://github.com/neopen/task-schedule-manager.git"
Documentation = "https://github.com/neopen/task-schedule-manager#README"

[tool.setuptools.packages.find]
where = ["src"]
include = ["neotask*"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]