[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neotask"
version = "0.4.0"
description = "NeoTask - 轻量级 Python 异步任务队列，支持即时/延时/周期任务，内置优先级队列、自动重试 | Lightweight Python Async Task Queue Manager"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "HiPeng", email = "helpengx@gmail.com"}
]
maintainers = [
    {name = "HiPeng", email = "helpengx@gmail.com"}
]
keywords = [
    # 英文关键词
    "task-queue", "async", "asyncio", "task-scheduler", "job-queue",
    "background-tasks", "task-manager", "priority-queue", "cron",
    "scheduled-tasks", "distributed-tasks", "worker-pool",
    # 中文关键词
    "任务队列", "异步任务", "定时任务", "任务调度", "后台任务",
    "优先级队列", "周期任务", "分布式任务", "工作池"
]
classifiers = [
    # 开发状态
    "Development Status :: 4 - Beta",
    # 目标受众
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    # 许可证
    "License :: OSI Approved :: MIT License",
    # 操作系统
    "Operating System :: OS Independent",
    # 编程语言
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    # 框架
    "Framework :: AsyncIO",
    # 主题
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
]

requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
# Web UI 支持
ui = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.6",
]

# Redis 分布式支持
redis = [
    "redis>=4.5.0",
]

# 完整功能
full = [
    "neotask[ui,redis]",
]

# 开发依赖
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "build>=1.0.0",
    "twine>=4.0.0",
    "cloudpickle",
    "psutil",
    "aiosqlite>=0.19.0"
]

# 文档依赖
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.24.0",
]

[project.urls]
# 项目链接
Homepage = "https://github.com/neopen/neotask"
Repository = "https://github.com/neopen/neotask"
Documentation = "https://task.pengline.cn"
Issues = "https://github.com/neopen/neotask/issues"
Changelog = "https://github.com/neopen/neotask/releases"

# 作者链接
Author = "https://github.com/neopen"

[project.scripts]
neotask = "neotask.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["neotask*"]
exclude = ["tests*", "examples*", "docs*"]

[tool.setuptools.package-data]
neotask = ["py.typed", "web/static/*", "web/templates/*"]

# ========== 代码格式化工具配置 ==========

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | src/neotask/version.py
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
known_first_party = ["neotask"]
known_third_party = []
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

# ========== 类型检查配置 ==========

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
disallow_untyped_defs = false  # 允许未类型注解的函数
ignore_missing_imports = true
exclude = [
    "tests/",
    "examples/",
    "docs/",
    "build/",
    "dist/",
]

# ========== 代码检查配置 ==========

[tool.ruff]
line-length = 100
target-version = "py39"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "RUF", # ruff specific rules
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]
exclude = [
    "tests/",
    "examples/",
    "docs/",
    "build/",
    "dist/",
    "venv/",
    ".venv/",
]

# ========== 测试配置 ==========

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=src/neotask",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "asyncio: marks tests as async",
    "slow: marks tests as slow",
    "unit: unit tests",
    "integration: integration tests",
]

# ========== 覆盖率配置 ==========

[tool.coverage.run]
source = ["src/neotask"]
omit = [
    "*/tests/*",
    "*/examples/*",
    "*/__pycache__/*",
    "*/version.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
precision = 2
show_missing = true

# ========== 构建配置 ==========

[tool.build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

# ========== 版本管理 ==========

[tool.bumpversion]
current_version = "1.5.0"
commit = true
tag = true
tag_name = "v{new_version}"
commit_message = "chore: bump version to {new_version}"
allow_dirty = false

[[tool.bumpversion.files]]
filename = "src/neotask/__init__.py"

[[tool.bumpversion.files]]
filename = "pyproject.toml"

# ========== 发布配置 ==========

[tool.twine]
repository = "https://upload.pypi.org/legacy/"
username = "__token__"

# ========== 文档配置 ==========

[tool.mkdocs]
site_name = "NeoTask Documentation"
site_description = "NeoTask - Lightweight Python Async Task Queue Manager"
site_author = "HiPeng"
site_url = "https://pengline.cn/neotask"
docs_dir = "docs"
site_dir = "site"

# ========== 预提交钩子配置 ==========

[tool.pre-commit]
repos = [
    { repo = "https://github.com/pre-commit/pre-commit-hooks", rev = "v4.5.0", hooks = [
        { id = "trailing-whitespace" },
        { id = "end-of-file-fixer" },
        { id = "check-yaml" },
        { id = "check-added-large-files" },
    ]},
    { repo = "https://github.com/astral-sh/ruff-pre-commit", rev = "v0.1.0", hooks = [
        { id = "ruff", args = ["--fix"] },
    ]},
    { repo = "https://github.com/psf/black", rev = "23.11.0", hooks = [
        { id = "black" },
    ]},
    { repo = "https://github.com/pre-commit/mirrors-mypy", rev = "v1.7.0", hooks = [
        { id = "mypy" },
    ]},
]

# ========== 说明 ==========
# NeoTask - 轻量级 Python 异步任务队列管理器
#
# 功能特性：
# - 零依赖部署，开箱即用
# - 支持即时任务、延时任务、周期任务
# - 内置优先级队列，支持任务优先级
# - 失败任务自动重试
# - 支持内存、SQLite、Redis 多种存储后端
# - 可选 Web UI 监控面板
# - 完整的异步 API 支持
#
# 使用场景：
# - AI 生成任务（文生图、视频生成）
# - 批量文件处理（转码、压缩、上传）
# - 定时报表发送
# - 延迟通知推送
# - 后台数据分析
# - 分布式爬虫调度